log/build_2022-03-13_11-43-12/py_package/stderr.log
  File "/home/ghani/my_ws/install/py_package/lib/python3.8/site-packages/py_package/publisher_member_function.py", line 28
    global  x=input('enter x position')
             ^
SyntaxError: invalid syntax

